--- a/casas.html
+++ b/casas.html
@@ -22,7 +22,7 @@
         <div id="casas">
          <img class="casas" src="images/gryff.jpg" alt="gryffindor" onclick="location.href='gryff.html';">
          <img class="casas" src="images/huffle.jpg" alt="hufflepuf" onclick="location.href='huffle.html';">
-         <img class="casas" src="images/Sly.jpg" alt="slytherin" onclick="location.href='sly.html';">
+         <img class="casas" src="images/sly1.jpg" alt="slytherin" onclick="location.href='sly.html';">
          <img class="casas" src="images/raven.jpg" alt="revenclaw" onclick="location.href='raven.html';">
         </div>
 
