--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="casas">
          <img class="casas" src="images/gryff.jpg" alt="">
          <img class="casas" src="images/huffle.jpg" alt="">
-         <img class="casas" src="images/Sly.jpg" alt="">
+         <img class="casas" src="images/sly1.jpg" alt="">
          <img class="casas" src="images/raven.jpg" alt="">
         </div>
 
